--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title></title>
+		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
+		<p>Hello, world!</p>
 	</body>
 </html>
