--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<link rel="stylesheet" href="./style.css">
 	</head>
 	<body>
-		<p>Hello, world!</p>
-		<p>It is new line in my site</p>
+		<div>
+			<p>Hello, world!</p>
+			<p>It is new line in my site</p>
+		</div>
 	</body>
 </html>
