change headers in index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	</head>
 	<body>
 		<div>
+			<h2>First block in the site</h2>
 			<p>Hello, world!</p>
 			<p>It is new line in my site</p>
+		</div>
+		<div class="second-block">
+			<h2>Second block in this web-site</h2>
 		</div>
 	</body>
 </html>
