--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		</div>
 		<div class="second-block">
 			<h2>Second block in this web-site</h2>
+			<p>Hello, it is Vlad</p>
 		</div>
 	</body>
 </html>
