--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div class="second-block">
 			<h2>Second block in this web-site</h2>
 			<p>Hello, it is Vlad</p>
+			<p>add branch development</p>
 		</div>
 	</body>
 </html>
