--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<h2>Second block in this web-site</h2>
 			<p>Hello, it is Vlad</p>
 			<p>add branch development</p>
+			<p>add branch "first fix"</p>
 		</div>
 	</body>
 </html>
